# lancache-manager

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  BUILD.md  CONTRIBUTING.md  Dockerfile  GRAFANA_SETUP.md  GameImagesController.cs.backup  LICENSE  LICENSE-MIT  PRIVACY.md  Program.cs.backup  README.MD  README.md  README.zh.md  RELEASE_NOTES.md  RELICENSE-ANNOUNCEMENT.md  Release_notes.md  StatsCache.cs.backup  SteamService.cs.backup  TELEMETRY_SETUP.md  TRADEMARK.md  dev-setup.ps1  docker-build.sh  docker-compose.yml  entrypoint.sh  global.json  lancache-manager.sln  package-lock.json  postgresql.conf  release_notes.md  test-fixes.ps1  update-version.bat  update-version.sh
.cursor/plans/: operation_conflict_adoption_gaps.plan.md
.github/workflows/: create-release.yml  docker-build-branch.yml  docker-build-dev.yml  docker-build-release.yml  docker-build.yml  lint.yml
.husky/: pre-commit
Api/: Directory.Build.props
Api/LancacheManager/: LancacheManager.csproj  Program.cs  appsettings.Development.json  appsettings.json  bulk_processing.marker  lancache-manager-dev.db  runtimeconfig.template.json
Api/LancacheManager/Configuration/: ApiOptions.cs  DatasourceConfig.cs
Api/LancacheManager/Constants/: LancacheConstants.cs
Api/LancacheManager/Controllers/: ApiKeysController.cs  AuthController.cs  BattleNetDaemonController.cs  BattleNetMappingController.cs  BlizzardController.cs  CacheController.cs  ClientGroupsController.cs  DashboardController.cs  DataMigrationController.cs  DatabaseController.cs  DatasourceConfigurationController.cs  DepotsController.cs  DevicesController.cs  DownloadsController.cs  EpicDaemonController.cs  EpicGameMappingController.cs  EventsController.cs  FileBrowserController.cs  GameDetectionController.cs  GameImagesController.cs  GameInfoController.cs  GamesController.cs  GcController.cs  GuestPrefillValidation.cs  LogsController.cs  ManagementController.cs  MemoryController.cs  MetricsController.cs  OperationStateController.cs  OperationsController.cs  PerformanceController.cs  PersistentPrefillController.cs  PrefillAdminController.cs  PrefillController.cs  PrefillDaemonController.cs  RiotDaemonController.cs  ScheduleController.cs  ScheduledPrefillConfigController.cs  SessionsController.cs  SetupController.cs  (+16 more)
Api/LancacheManager/Core/: CacheFileSizeHelper.cs  CacheScanStaleCalculator.cs  CachedDetectionResponseBuilder.cs  GameCacheInfoMergeHelper.cs  GamesOnDiskCalculator.cs
Api/LancacheManager/Data/: AppDbContext.cs  GameCacheInfo.cs  ServiceCacheInfo.cs
Api/LancacheManager/Extensions/: ServiceCollectionExtensions.cs  ServiceScopeExtensions.cs
Api/LancacheManager/Hubs/: BattleNetDaemonHub.cs  (+9 more)
Tests/LancacheManager.Tests/: ActivityRegistryTests.cs  BareMetalDiskFeatureContractTests.cs  BattleNetTactExtractionTests.cs  CacheDashboardRefreshTests.cs  CacheSizeConfigurationTests.cs  CacheSizeNullOutcomeTests.cs  CacheSizeQueueTests.cs  CacheSizeScanNotificationFlagTests.cs  CompleteOperationTerminalEmitTests.cs  ConflictScopeTests.cs  CorruptionDetectionPersistenceTests.cs  CorruptionProgressRelayTests.cs  CorruptionRemovalContractTests.cs  CorruptionScanInvalidationTests.cs  CredentialChallengeParsingTests.cs  DaemonClientChallengeWaiterTests.cs  DaemonClientConnectionLifecycleTests.cs  DaemonClientEventDrainTests.cs  DaemonEventDrainTrackerTests.cs  DashboardBatchCacheContractTests.cs  DataImportProgressContractTests.cs  DatabaseResetProgressContractTests.cs  DatasourceCapabilityServiceTests.cs  DatasourceServiceAutoDiscoveryTests.cs  DepotMappingNotificationFlagTests.cs  DownloadCleanupServiceTests.cs  EpicDetectionRemovalTests.cs  EvictionNotificationDisplayFlagContractTests.cs  GameDetectionProgressMonotonicTests.cs  GameDetectionVisibilityRaceTests.cs  GamesOnDiskCalculatorTests.cs  KeySchemeLaunchFreshnessContractTests.cs  LancacheManager.Tests.csproj  LiveLogMonitorConcurrencyTests.cs  LogRemovalProgressTests.cs  LogSourceLayoutParityTests.cs  LogsControllerRustFileOperationsTests.cs  NameKeyedBannerSourceTests.cs  NameKeyedSteamAppIdsTests.cs  NamedEvictionRemovalQueryTranslationTests.cs  (+58 more)
Web/: .eslintrc.json  .prettierignore  .prettierrc.json  clear-auth.html  eslint.config.mjs  index.html  knip.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
Web/scripts/: setup-git-hooks.mjs  test-apply-dashboard-batch.mjs  test-live-download-previews.mjs  test-nginx-reopen-availability.mjs  validate-badges.mjs  validate-stage-keys.mjs
Web/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx  types.ts  vite-env.d.ts
community-themes/: README.md  accessible-deuteranopia.toml  accessible-protanopia.toml  accessible-tritanopia.toml  charcoal-brown.toml  lancache-unofficial.toml  sage-wood.toml  sage.toml
docs/: BANDWIDTH_MONITORING_PLAN.md  external-postgres-migration.md
rust-processor/: Cargo.toml  README.md  blizzard_steam_appids.json  build.ps1  build.sh  tact_products.json
rust-processor/scripts/: verify_cache_key.py
rust-processor/src/: cache_blizzard_remove.rs  cache_cleaner.rs  cache_clear.rs  cache_corruption.rs  cache_corruption_detector.rs  cache_detect_matching.rs  cache_detect_queries.rs  cache_epic_remove.rs  cache_eviction_paths.rs  cache_eviction_scan.rs  cache_game_detect.rs  cache_game_remove.rs  cache_named_game_remove.rs  cache_purge_log_entries.rs  cache_riot_remove.rs  cache_service_remove.rs  cache_size.rs  cache_steam_remove.rs  cache_structural_scanner.rs  cache_structural_state.rs  cache_utils.rs  cache_xbox_remove.rs  cancel.rs  content_scan.rs  corruption_detector.rs  corruption_manager.rs  data_migrator.rs  database_reset.rs  db.rs  db_migrate.rs  db_reset.rs  game_cache_detector.rs  game_cache_remover.rs  log_discovery.rs  log_layout.rs  log_manager.rs  log_processor.rs  log_purge.rs  log_reader.rs  log_service_manager.rs  (+16 more)
scripts/: migrate-sqlite-to-postgres.sh
unraid/: lancache-manager.xml
wiki/: DOCKER_ENVIRONMENT_REFERENCE.MD  GRAFANA.MD  Grafana.md  PERFORMANCE_TUNING.MD  PERFORMANCE_TUNING.md  README.MD  THEMING.MD  Theming.md
(+1464 files in other folders)
