[package]
name = "lancache_processor"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "lancache_processor"
path = "src/main.rs"

[[bin]]
name = "database_reset"
path = "src/database_reset.rs"

[[bin]]
name = "log_manager"
path = "src/log_manager.rs"

[[bin]]
name = "cache_cleaner"
path = "src/cache_cleaner.rs"

[[bin]]
name = "corruption_manager"
path = "src/corruption_manager.rs"

[[bin]]
name = "game_cache_detector"
path = "src/game_cache_detector.rs"

[[bin]]
name = "game_cache_remover"
path = "src/game_cache_remover.rs"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0"
rayon = "1.11"
num_cpus = "1.16"
libc = "0.2"
flate2 = "1.1"
zstd = "0.13"
md5 = "0.7"
tempfile = "3.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
