[package]
name = "lancache_processor"
version = "1.0.0"
edition = "2021"

# =============================================================================
# BINARY EXECUTABLES
# =============================================================================
# Organized by domain for easier navigation:
#   - log_*        : Log file operations (parse, manage)
#   - cache_*      : Cache file operations (clear, detect, remove)
#   - db_*         : Database operations (reset, migrate)
# =============================================================================

# --- Log Operations ---

# Primary log processor - parses nginx access logs into database
[[bin]]
name = "log_processor"
path = "src/log_processor.rs"

# Real-time speed tracker - tails logs and outputs JSON speed snapshots
[[bin]]
name = "speed_tracker"
path = "src/speed_tracker.rs"

# Count services in logs OR remove service entries from log files
[[bin]]
name = "log_service_manager"
path = "src/log_service_manager.rs"

# --- Cache Operations ---

# Calculate cache size and estimate deletion time
[[bin]]
name = "cache_size"
path = "src/cache_size.rs"

# Clear entire cache directory (all hex directories)
[[bin]]
name = "cache_clear"
path = "src/cache_clear.rs"

# Detect and remove corrupted cache chunks
[[bin]]
name = "cache_corruption"
path = "src/cache_corruption.rs"

# Detect which games have files in the cache
[[bin]]
name = "cache_game_detect"
path = "src/cache_game_detect.rs"

# Remove all cache files for a specific game
[[bin]]
name = "cache_game_remove"
path = "src/cache_game_remove.rs"

# Remove all cache files for a specific Epic game by name
[[bin]]
name = "cache_epic_remove"
path = "src/cache_epic_remove.rs"

# Remove all cache files for a specific service (non-Steam)
[[bin]]
name = "cache_service_remove"
path = "src/cache_service_remove.rs"

# Scan cache directories and mark evicted downloads in the database
[[bin]]
name = "cache_eviction_scan"
path = "src/cache_eviction_scan.rs"

# Bulk-purge nginx access.log entries for a batch of evicted games
# (called by RemoveEvictedRecordsAsync so a future ResetLogPosition cannot
# resurrect games whose Downloads rows have already been deleted)
[[bin]]
name = "cache_purge_log_entries"
path = "src/cache_purge_log_entries.rs"

# --- Database Operations ---

# Reset database tables (clear all data)
[[bin]]
name = "db_reset"
path = "src/db_reset.rs"


[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0"
rayon = "1.11"
num_cpus = "1.16"
libc = "0.2"
flate2 = "1.1"
zstd = "0.13"
md5 = "0.7"
sha2 = "0.10"
tempfile = "3.23"
jwalk = "0.8"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.16", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
